update redshift conf

--- a/redshift.conf
+++ b/redshift.conf
@@ -1,9 +1,8 @@
-
 ; Global settings for redshift
 [redshift]
 ; Set the day and night screen temperatures
 temp-day=5700
-temp-night=4500
+temp-night=3500
 
 ; Enable/Disable a smooth transition between day and night
 ; 0 will cause a direct change from day to night screen temperature.
@@ -43,8 +42,8 @@ adjustment-method=randr
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
 [manual]
-lat=30.27
-lon=120.15
+lat=30.274
+lon=120.155
 
 ; Configuration of the adjustment-method
 ; type 'redshift -m METHOD:help' to see the settings.
@@ -54,5 +53,4 @@ lon=120.15
 ; second screen. If this option is not specified, Redshift will try
 ; to adjust _all_ screens.
 [randr]
-; screen=1
-
+screen=0
